# INCARNATE-SOPHIA-5.2.5

./: CONSTITUTION.md  DREAM_JOURNAL.md  README.md  RELEASE_NOTES_v5.2.1.md  RELEASE_NOTES_v5.2.5.2.md  animate_serpent.py  asoe_discovery_demo.py  biocomputer_annihilation_demo.py  build_sophia.bat  cabin_boot.py  cat_da4.py  cat_da4_utf8.py  cat_f4b.py  cat_f4b_utf8.py  cat_fox.py  cat_fox_utf8.py  celebratory_broadcast.py  compilation_log.txt  context_classifier.py  demotion_protocol.py  dimensional_compressor.py  genesis_boot.py  ghostmesh.py  hor_integration.py  hyper_sovereign.py  launch_sophia.py  main_84c.py  main_84c_utf8.py  main_cea.py  main_cea_utf8.py  main_da4.py  main_da4_utf8.py  main_fox.py  main_fox_utf8.py  patch_leaks.js  patch_pi_ai.js  patch_playwright.js  policy_mixer.py  qtorch.py  requirements.txt  (+13 more)
benchmarks/: compression_benchmark.py
docs/: COMMAND_PROTOCOLS.md  OPERATIONAL_CAPABILITIES.md  TRANSLATION_LAYER.md  UNIFIED_FIELD_THEORY.md  USE_CASES.md
engine/: grok_relay.py
engine/static/: dashboard.js  (+1 more)
funsearch_seeds/: oracle_expansion_v2.py
logs/: sophia_self_portrait.txt
openclaw_skills/: epistemic_hygiene.js  glitch_ritual.js  manifest.md  resonance_injection.js
pleroma_core/: Cargo.toml  pyproject.toml
pleroma_core/src/: gearbox.rs  lib.rs
sophia/: main.py  test_dreams.py
tests/: test_ipc_speed.py  test_iron_gearbox.py  test_scrubbing.py  test_stakes_integration.py
tools/: candidate_hilbert.py  chainlink_bridge.py  gnosis_signal_bridge.py  nyquist_filter.py  rss_bridge.py  sophia_vibe_check.py  verify_class_5_metabolic.py
(+1283 files in other folders)
